public/stylesheets/main.css
/* ... */
.prev>i {
	left: 0;
}

.next>i {
	right: 0;
}

.prev:active, .next:active {
  background-color: rgba(0,0,0,0.2);
}

.slidePreviews {
	
}

.slidePreview {
	width: 20%;
	padding-top: 20%;
	opacity: .8;
	margin: 0;
}


#slideshow-exit {
	position: absolute;
	width: 100%;
	z-index: 41;
	top: 0;
	bottom: 0;
}


.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}



.have-account {
	padding: 4%;
	font-size: .8em;
	text-align: center;
}


.have-account a {
	color: rgb(0, 38, 66);
	font-size: 1.2em;
	text-decoration: underline;
}

.profile-thumbnail {
	width: 47%;
	height: 0;
	padding-top: 46%;
	max-height: 140px;
	margin: 0 0 2% 2%;
	/*box-shadow: inset -4px -4px 4px rgba(0, 0, 0, .1);*/
}




.profile-thumbnail .thumbnail-info {
	/*font-size: .6em; */
	padding: 6px 4%;
}


.new-photo {
	background-color: #5BBA6F;
}

.new-photo .thumbnail-info {
	background-color: transparent;
	bottom: auto;
	top: 50%;
	transform: translateY(-50%);
	text-align: center;
	font-size: 1.8em;
}

.new-photo .thumbnail-info span {
	/*border: 2px dashed white;*/
	padding: 16px;
}


#titleoption option::first-letter {
	text-transform: uppercase;
}



#file-upload {
	/*visibility: hidden;*/
	display: none;
}


#file-upload + label {
	width: 100%;
	display: inline-block;
	overflow: auto;
	text-align: center;
	padding: 12px 0 0 0;
}



.details,
.shelter-info {
	position: relative;
	background-color: #002633;
	color: white;
	border-radius: 4px;
	margin: 24px 2%;
	padding: 10%;
	width: 76%;
	max-width: 590px;
	float: left;
	clear: both;
	max-height: 460px;
	overflow: hidden;
}

.details li {
	/*line-height: 2.5em;*/
	padding: .6em 0 .6em 0;
}

.details li:first-of-type {
	padding-bottom: 1.2em;
}

#view-all {
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	color: white;
	text-align: center;
	font-size: .8em;
	padding: 6em 0 1em 0;
	/*background-color: rgba(66, 75, 84, .9);*/
	display: none;
	/*text-decoration: underline;*/
	background: linear-gradient(to bottom, rgba(0, 38, 66, .22), rgba(0, 38, 66, 1));
	/*background: linear-gradient(to bottom, rgba(0, 38, 66, .1), rgba(0, 38, 66, 1));*/
}

#view-all:hover {
	cursor: pointer;
}


.shelter-info ul {
	line-height: 3em;
}
.shelter-info {
	text-align: center;
	background-color: #C5D1EB;
	color: #002642;
	font-size: .8em;
	overflow: auto;
	margin-top: 0;
	padding: 8%;
	width: 80%;
	max-width: 621px;
}

.shelter-info h2 {
	color: #002642;
	width: 100%;
}



#friend-description {
	font-size: .8em;
	line-height: 1.6em;
	white-space: pre-line;
	border-top: 1px solid white;
	margin-top: 42px;
	padding-top: 0;
}


#bio {
	font-size: 1.6em;
	margin: 12px 0;
	/*font-family: 'Roboto', sans-serif;*/
}


#view-all span {
	border-bottom: 1px solid white;
}



.page-selector {
	display: block;
	text-align: center;
	width: 180px;
	margin: 0 auto;
	margin-top: 62px;
}

.page-selector h4 {
	padding: 10px;
}

.prev-page,
.next-page {
	display: inline-block;
/*	width: 100px;
	height: 80px;*/
	border-radius: 2px 10px 10px 2px;
	font-size: 2.6em;
	width: 48%; 
	padding: 14px 0 6px 0;
	background-color: rgb(0, 38, 66);
	text-align: center;
}

.prev-page {
	border-radius: 10px 2px 2px 10px;
}


.mySlides {
	display: none;
}




.human-dp,
.human-dp-header {
	position: relative;
	display: inline-block;
	width: 140px;
	height: 140px;
	border-radius: 100%;
	float: none;
	margin: 4% auto;
	padding: 0;
	background-color: white;
	background-size: cover;
	background-position: center center;
	border-radius: 100%;
}

.human-dp-header {
	width: 1.2em;
	height: 1.2em;
	margin: 0 6px 0 0;
	margin-left: -1.2em;
	vertical-align: sub;
}


.user-tools span {
	position: relative;

}


.menu-icon {
	margin-left: -1em;
	position: static;
	font-size: 1em;
	padding-right: 6px;
}
/*.fa-user {
	font-size: 6em;
	color: rgb(0, 38, 66);
	color: black;
	background-color: white;
}*/


.human-dp-header {
	position: relative;
}

.new-dp {
	/*position: absolute;*/
	position: relative;
	background-color: white;
	color: black;
	width: 60px;
	height: 60px;
	border-radius: 100%;
	bottom: -10px;
	left: 50px;
	
}


.dp-camera {
	color: black;
	font-size: 1em;
	top: 50%;
	right: 50%;
	/*transform: translateY(-100%);*/
	/*transform: translateX(50%);*/
	transform: translate(50%, -50%);
}





/*Tools*/



.flash {
	width: 80%;
	padding: 12px 4%;
	margin: 20px 6%;
	border-radius: 4px;
}

.flash-failure {
	background-color: #ff8787;
	color: #600000;
}


.flash-success {
	background-color: #9bff9e;
	color: #003d01;
}



.clear {
	clear: both;
}


footer {
	display: inline-block;
	width: 100%;
	margin: 44px auto;
	font-size: .8em;
	text-align: center;
}

footer a {
	font-size: inherit;
	color: inherit;
	text-decoration: underline;
}


#jump-to-top {
	background-color: #002642;
	color: white;
	font-size: .8em;
	padding: 10px;
	border-radius: 6px;
	position: fixed;
	right: 10px;
	top: 100vh;
	transform: translateY(-50px);
	text-align: center;
}

#jump-to-top:hover {
	cursor: pointer;
}



#filter-menu {
	width: 80%;
	margin: 0 auto;
	background-color: #C5D1EB;
	border-radius: 8px;
	max-width: 480px;
	margin: 24px auto;
}

.filter-form {
	max-width: 180px;
	display: none;
}


#filter-menu input,
#filter-menu select,
#filter-menu button,
#filter-menu label {
	height: 36px;
	font-size: .8em;
	padding: 8px 0;
	margin: 12px 0;
}

#filter-menu input[type=radio] + label {
	width: 48%;
}

#filter-menu .profile-head {
	width: 100%;
	padding: 8px 0; 
	/*margin: 10px 10%;*/
	border: none;
}

#filter-menu #filter-toggle {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	z-index: 6
}


#filter-toggle:hover {
	cursor: pointer;
}

#filter-menu #filter-up {
	display: none;
}



#filter-menu .profile-head h4 {
	font-size: .8em;
}

#filter-menu #age_group {
	float: left;
}

#filter-menu button {
	margin-top: 0;
	/*font-size: 1em;*/
}
/* ... */

